2002-10-01  Robert Collins <rbtcollins@hotmail.com>

	* thread.cc (pthread_key::keys): Copy on fork. Add a comment explaining
	why.
	(pthreadNull::_instance): Copy on fork. Absolutely no state exists
	in pthreadNull. 

2002-09-30  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* cygserver_transport_pipes.cc (transport_layer_pipes::accept):
	Remove trailing \n from debug_printf.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	* thread.cc (pthread_mutex::initMutex): Remove \n from api_fatal.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	* thread.cc (pthread::precreate): Use explicit "no inherit" option when
	creating mutex.
	(pthread_mutex::nativeMutex::init): Ditto.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	* thread.cc (pthread_key::keys): Do not copy on fork.
	(pthread_mutex::mutexInitializationLock): Ditto.
	(pthreadNull::_instance): Ditto.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (unused_sig_wrapper): Still need additional level of
	indirection when setting errno.

2002-09-30  Robert Collins <rbtcollins@hotmail.com>

	* thread.cc (pthread_mutex::initMutex): Use the wrapper init call.
	(pthread_mutex::nativeMutex::init): Implement.
	(pthread_mutex::nativeMutex::lock): Ditto.
	(pthread_mutex::nativeMutex::unlock): Ditto.
       	(pthread_mutex::init): Use the wrapper lock and unlockcalls.
	* thread.h (pthread_mutex): Move mutexInitializationLock into a 
	nativeMutex wrapper class.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	Remove \n from calls to strace class printfs throughout.

2002-09-30  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (unused_sig_wrapper): Accommodate newer compilers.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* security.cc (allow_ntsec): Default to zero.
	* environ.cc (environ_init): Set allow_ntsec to TRUE by default,
	assuming OS allows it.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* environ.cc (environ_init): Avoid a compiler warning.